tests/fixtures/invalid/float_sub_bytes.py
# Cannot subtract Float and Bytes
x: float = 1.0 - b"hello"
